# mini-course-agent-app

./: .gitignore  README.md  SKILLS.md  docker-compose.yml  render.yaml  run-dev.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  settings.py
backend/app/course/: __init__.py  agents.py  claude_client.py  events.py  memory.py  models.py  openai_client.py  orchestrator.py  repository.py
backend/mini_course_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_newtons_flow.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.test.tsx  App.tsx  styles.css
frontend/src/components/: CoursePanels.tsx
frontend/src/services/: contracts.ts  http.ts  mock.ts  streamParser.test.ts  streamParser.ts
frontend/src/state/: courseReducer.test.ts  courseReducer.ts
frontend/src/types/: course.ts
